# 3dSlicerPointsVTKWasm

./: CMakeCache.txt  CMakeLists.txt  Cone.cxx  Dockerfile  Makefile  README.md  cmake_install.cmake  index.html  package-lock.json  package.json
Cone/: CMakeCache.txt  Cone.cxx  Makefile  cmake_install.cmake
build-emscripten/: .ninja_deps  .ninja_log  CMakeCache.txt  Cone.js  build.ninja  cmake_install.cmake  index.html  itk-wasm-build-env
build-emscripten/build-emscripten/: itk-wasm-build-env
build-emscripten/slicer_mrml_repository/CMake/: SlicerConfig.cmake
build-emscripten/slicer_mrml_repository/vtkAddon/: vtkAddonConfigure.h
build-vtk-wasm/: .ninja_log  CMakeCache.txt  cmake_install.cmake  modules.dot  unix_path.sh  vtk-config.cmake
build-vtk-wasm-2/: .ninja_log  CMakeCache.txt  cmake_install.cmake  modules.json  unix_path.sh  vtk-config.cmake
build-vtk-wasm-2/Charts/Core/: cmake_install.cmake
build-vtk-wasm-2/Common/Color/: cmake_install.cmake
build-vtk-wasm-2/Common/ComputationalGeometry/: cmake_install.cmake
build-vtk-wasm-2/Common/Core/: cmake_install.cmake  vtkBuild.h
build-vtk-wasm-2/Common/DataModel/: cmake_install.cmake
build-vtk-wasm-2/Common/ExecutionModel/: cmake_install.cmake  vtkCommonExecutionModelModule.h
build-vtk-wasm-2/Common/ImplicitArrays/: cmake_install.cmake
build-vtk-wasm-2/Common/Math/: cmake_install.cmake
build-vtk-wasm-2/Common/Misc/: cmake_install.cmake
build-vtk-wasm-2/Common/System/: cmake_install.cmake
build-vtk-wasm-2/Common/Transforms/: cmake_install.cmake
build-vtk-wasm-2/Domains/Chemistry/: cmake_install.cmake
build-vtk-wasm-2/Domains/ChemistryOpenGL2/: cmake_install.cmake
build-vtk-wasm-2/Filters/AMR/: cmake_install.cmake  vtkFiltersAMRModule.h
build-vtk-wasm-2/Filters/CellGrid/: cmake_install.cmake
build-vtk-wasm-2/Filters/Core/: cmake_install.cmake
build-vtk-wasm-2/Filters/DSP/: cmake_install.cmake
build-vtk-wasm-2/Filters/Extraction/: cmake_install.cmake  vtkFiltersExtractionModule.h
build-vtk-wasm-2/Filters/FlowPaths/: cmake_install.cmake
build-vtk-wasm-2/Filters/General/: cmake_install.cmake
build-vtk-wasm-2/Filters/Generic/: cmake_install.cmake  vtkFiltersGenericModule.h
build-vtk-wasm-2/Filters/Geometry/: cmake_install.cmake  vtkFiltersGeometryModule.h
build-vtk-wasm-2/Filters/GeometryPreview/: cmake_install.cmake  vtkFiltersGeometryPreviewModule.h
build-vtk-wasm-2/Filters/Hybrid/: cmake_install.cmake  vtkFiltersHybridModule.h
build-vtk-wasm-2/Filters/HyperTree/: cmake_install.cmake
build-vtk-wasm-2/Filters/Imaging/: cmake_install.cmake
build-vtk-wasm-2/Filters/Modeling/: cmake_install.cmake  vtkFiltersModelingModule.h
build-vtk-wasm-2/Filters/Parallel/: cmake_install.cmake
build-vtk-wasm-2/Filters/ParallelImaging/: cmake_install.cmake
build-vtk-wasm-2/Filters/Points/: cmake_install.cmake
build-vtk-wasm-2/Filters/Programmable/: cmake_install.cmake  vtkFiltersProgrammableModule.h
build-vtk-wasm-2/Filters/Reduction/: cmake_install.cmake
build-vtk-wasm-2/Filters/SMP/: cmake_install.cmake
build-vtk-wasm-2/Filters/Selection/: cmake_install.cmake
build-vtk-wasm-2/Filters/Sources/: cmake_install.cmake
build-vtk-wasm-2/Filters/Statistics/: cmake_install.cmake  vtkFiltersStatisticsModule.h
build-vtk-wasm-2/Filters/Texture/: cmake_install.cmake
build-vtk-wasm-2/Filters/Topology/: cmake_install.cmake
build-vtk-wasm-2/Filters/Verdict/: cmake_install.cmake
build-vtk-wasm-2/IO/Asynchronous/: cmake_install.cmake
build-vtk-wasm-2/IO/CellGrid/: cmake_install.cmake
build-vtk-wasm-2/IO/Chemistry/: cmake_install.cmake
build-vtk-wasm-2/IO/CityGML/: cmake_install.cmake
build-vtk-wasm-2/IO/Core/: cmake_install.cmake
build-vtk-wasm-2/IO/EnSight/: cmake_install.cmake  vtkIOEnSightModule.h
build-vtk-wasm-2/IO/Export/: cmake_install.cmake
build-vtk-wasm-2/IO/ExportGL2PS/: cmake_install.cmake
build-vtk-wasm-2/IO/ExportPDF/: cmake_install.cmake
build-vtk-wasm-2/IO/Geometry/: cmake_install.cmake
build-vtk-wasm-2/IO/Image/: cmake_install.cmake  vtkIOImageModule.h
build-vtk-wasm-2/IO/Import/: cmake_install.cmake
build-vtk-wasm-2/IO/Infovis/: cmake_install.cmake
build-vtk-wasm-2/IO/LSDyna/: cmake_install.cmake
build-vtk-wasm-2/IO/Legacy/: cmake_install.cmake
build-vtk-wasm-2/IO/MotionFX/: cmake_install.cmake  vtkIOMotionFXModule.h
build-vtk-wasm-2/IO/Movie/: cmake_install.cmake
build-vtk-wasm-2/IO/OggTheora/: cmake_install.cmake  vtkIOOggTheoraModule.h
build-vtk-wasm-2/IO/PLY/: cmake_install.cmake
build-vtk-wasm-2/IO/Parallel/: cmake_install.cmake  vtkIOParallelModule.h
build-vtk-wasm-2/IO/ParallelXML/: cmake_install.cmake
build-vtk-wasm-2/IO/SegY/: cmake_install.cmake
build-vtk-wasm-2/IO/TecplotTable/: cmake_install.cmake
build-vtk-wasm-2/IO/Video/: cmake_install.cmake
build-vtk-wasm-2/IO/XML/: cmake_install.cmake
build-vtk-wasm-2/IO/XMLParser/: cmake_install.cmake
build-vtk-wasm-2/Imaging/Color/: cmake_install.cmake
build-vtk-wasm-2/Imaging/Core/: cmake_install.cmake
build-vtk-wasm-2/Imaging/Fourier/: cmake_install.cmake  vtkImagingFourierModule.h
build-vtk-wasm-2/Imaging/General/: cmake_install.cmake
build-vtk-wasm-2/Imaging/Hybrid/: cmake_install.cmake
build-vtk-wasm-2/Imaging/Math/: cmake_install.cmake  vtkImagingMathModule.h
build-vtk-wasm-2/Imaging/Morphological/: cmake_install.cmake
build-vtk-wasm-2/Imaging/Sources/: cmake_install.cmake  vtkImagingSourcesModule.h
build-vtk-wasm-2/Imaging/Statistics/: cmake_install.cmake
build-vtk-wasm-2/Imaging/Stencil/: cmake_install.cmake
build-vtk-wasm-2/Infovis/Core/: cmake_install.cmake
build-vtk-wasm-2/Infovis/Layout/: cmake_install.cmake  vtkInfovisLayoutModule.h
build-vtk-wasm-2/Interaction/Image/: cmake_install.cmake
build-vtk-wasm-2/Interaction/Style/: cmake_install.cmake  vtkInteractionStyleModule.h
build-vtk-wasm-2/Interaction/Widgets/: cmake_install.cmake
build-vtk-wasm-2/Parallel/Core/: cmake_install.cmake  vtkSocketCommunicatorHash.h
source_cpp/: Cone.cxx
src/BasicRender/: BasicRender.cpp  BasicRender.h
src/Line/: Line.cxx  Line.h
(+303 files in other folders)
